# libwsclient

./: .travis.yml  CMakeLists.txt  README.md  base64.c  base64.h  sha1.c  sha1.h  uri.c  uri.h  wsclient.c  wsclient.h
test/: .test.sh  CMakeLists.txt  test.c
