CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
project(wsclient C)

if(NOT DEFINED INSTALL_PATH)
  set (CMAKE_INSTALL_PREFIX ${PROJECT_SOURCE_DIR}/prebuilt)
else()
  set (CMAKE_INSTALL_PREFIX ${INSTALL_PATH})
endif()

if(POLICY CMP0015)
  cmake_policy(SET CMP0015 NEW)
endif()

if(POLICY CMP0042)
  cmake_policy(SET CMP0042 NEW)
endif()

macro(use_c99)
  if (CMAKE_VERSION VERSION_LESS "3.1")
    if (CMAKE_C_COMPILER_ID STREQUAL "GNU")
      set (CMAKE_C_FLAGS "-std=gnu99 ${CMAKE_C_FLAGS}")
    endif ()
  else ()
    set (CMAKE_C_STANDARD 99)
  endif ()
endmacro(use_c99)

use_c99()

# Check dependent definitions
if(CMAKE_BUILD_TYPE STREQUAL "Debug")
  set(C_FLAGS "-g -O0")
endif()
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${C_FLAGS}")
message(STATUS "CMAKE_C_FLAGS=${CMAKE_C_FLAGS}")
if(NOT DEFINED OPENSSL_ROOT_DIR)
  message(FATAL_ERROR "Please define [OPENSSL_ROOT_DIR]")
endif()
if(DEFINED MEMDBG_INSTALL_DIR)
  add_definitions(-D_MEMDBG_)
endif()

# link dependency
include_directories(${PROJECT_SOURCE_DIR})
include_directories(${OPENSSL_ROOT_DIR}/include)
link_directories(${OPENSSL_ROOT_DIR}/lib)
if(DEFINED MEMDBG_INSTALL_DIR)
  include_directories(${MEMDBG_INSTALL_DIR}/include)
  link_directories(${MEMDBG_INSTALL_DIR}/lib)
endif()

# make target
aux_source_directory(${PROJECT_SOURCE_DIR} SRC_FILES)
add_library(${PROJECT_NAME} SHARED ${SRC_FILES})
if(${CMAKE_SYSTEM_NAME} STREQUAL "Android")
  set_target_properties(${PROJECT_NAME} PROPERTIES LINK_FLAGS "-Wl,--whole-archive,-lcrypto,-lssl,--no-whole-archive")
endif()

set(LIBS "")
if (${CMAKE_SYSTEM_NAME} STREQUAL "Android")
  find_library(log-lib log)
  list(APPEND LIBS "log")
else()
  list(APPEND LIBS "crypto")
  list(APPEND LIBS "ssl")
endif()
if(DEFINED MEMDBG_INSTALL_DIR)
  list(APPEND LIBS "memdbg")
endif()
target_link_libraries(${PROJECT_NAME} ${LIBS})

file(GLOB WSCLIENT_HEADERS ${PROJECT_SOURCE_DIR}/*.h)
install(FILES ${WSCLIENT_HEADERS} DESTINATION include)
install(TARGETS ${PROJECT_NAME} LIBRARY DESTINATION lib)
